# homemade-camera

./: .gitignore  CMakeLists.txt  README.md  background_build.sh  background_run.sh  build.sh  build_release.sh  clean.sh  config.json  ffmpeg_command.sh  icon.psd  leak_valgrind.sh  memleak.sh  roadmap.txt
include/: asio_base_session.h  asio_http_session.h  asio_listener.h  asio_session.h  asio_ws_session.h  capture.h  codec.h  config.h  config_manager.h  ffmpeg_capture.h  ffmpeg_encoder.h  guard.h  logger.h  time_util.h  v4l_capture.h  web_service.h
include/config/: config.h  config_manager.h
include/ipc/: ipc.h  proc.h
include/omx/: image_def.h  jpeg.c  jpeg.h  omx_image.c  omx_image.h  omx_jpg.h  omx_lib.h  omx_util.h
include/util/: bind.h  file_helper.h  guard.h  logger.h  string_util.h  thread_pool.h  time_util.h
include/video/: capture.h  codec.h  file_log.h  hard_jpg.h  jpeg.h  soft_jpg.h  v4l_capture.h
include/web/: asio_base_session.h  asio_http_session.h  asio_listener.h  asio_ws_session.h  file_loader.h  find_layer.h  http_file_handler.h  livestream.h  service.h  session.h  ssl_context_manager.h  web.h  web_service.h
src/: cap_proc.cpp  capture.cpp  config.cpp  config_manager.cpp  file_helper.cpp  file_loader.cpp  hard_jpg.cpp  http_file_handler.cpp  ipc.cpp  logger.cpp  logger_proc.cpp  main.cpp  net_proc.cpp  omx_image.c  omx_jpg.cpp  omx_lib.cpp  proc.cpp  service.cpp  soft_jpg.cpp  thread_pool.cpp  time_util.cpp  v4l_capture.cpp  web.cpp  web_service.cpp
src/linux/: v4l_capture.cpp
src/rpi/: jpeg.c
tools/: build.sh  capture.sh  clean.sh
web/: homecam.webmanifest  index.html  live.html  live.js  pvideo.html  pvideo.js  settings.html
web/app/: homecam.webmanifest  index.html  live.html  live.js  log.html  log.js  pvideo.html  pvideo.js  settings.html  settings.js
web/css/: dashboard.css
web/js/: dashboard.js
